-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
6.3
-
None
-
-
92f526ca47 (qt/qtmultimedia/dev) 77eab62840 (qt/qtmultimedia/6.3) 2c19931a79 (qt/qtmultimedia/6.2) 2c19931a79 (qt/qtmultimedia/6.2.3) 2c19931a79 (qt/tqtc-qtmultimedia/6.2) 2c19931a79 (qt/tqtc-qtmultimedia/6.2.3)
25: FAIL! : tst_QMediaPlayerBackend::audioVideoAvailable() '(!player.hasVideo())' returned FALSE. ()
25: Loc: [/Users/Samuel/Desktop/Qt/qt5/qtmultimedia/tests/auto/integration/qmediaplayerbackend/tst_qmediaplayerbackend.cpp(1166)]
- resulted from
-
QTBUG-99096 Android tst_qmediaplayerbackend test failed
-
- Closed
-
| For Gerrit Dashboard: QTBUG-99360 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 387497,2 | Fix Multimedia auto test audioVideoAvailable in Android | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 388958,2 | Fix Multimedia auto test audioVideoAvailable in Android | 6.3 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 388959,2 | Fix Multimedia auto test audioVideoAvailable in Android | 6.2 | qt/qtmultimedia | Status: MERGED | +2 | 0 |