Fix Multimedia auto test audioVideoAvailable in Android

Missing properties set.

Fixes: QTBUG-99360
Pick-to: 6.2 6.3
Change-Id: I363b8f77a7a77041674cea9aa9797ba7c1f0553d
Reviewed-by: Lars Knoll <lars.knoll@qt.io>